examples/fail/borrow/toplevel_borrow.dew
// expect error: [E002]
// & cannot appear in a top-level def binding.
def &x = 42;
